--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Flask==2.0.1
 Flask-CORS==3.0.10
-numpy==1.24.3
+Werkzeug==2.0.1
+numpy==1.26.4
 Pillow==9.5.0
-tensorflow==2.13.0
+tensorflow==2.14.0
 gunicorn==20.1.0
