--- a/.gitignore
+++ b/.gitignore
@@ -1,86 +1,8 @@
-# Python
 __pycache__/
-*.py[cod]
-*$py.class
-
-# Virtual Environment
+*.pyc
+.DS_Store
 venv/
-fresh_env/
-*.venv
 env/
-ENV/
-
-# IDEs and Editors
-.vscode/
-.idea/
-*.swp
-*.swo
-.DS_Store
-
-# Logs
-*.log
-
-# Temporary files
-*.tmp
-
-# Build files
-build/
-dist/
-*.egg-info/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# TensorFlow model files
-*.h5
-*.pb
-
-# Large media files
-*.jpg
-*.jpeg
-*.png
-*.gif
-*.mp4
-*.mov
-
-# Environment variables
 .env
-
-# AWS Elastic Beanstalk Files
-.elasticbeanstalk/*
-!.elasticbeanstalk/*.cfg.yml
-!.elasticbeanstalk/*.global.yml
-
-# Dependency directories
-node_modules/
-
-# Coverage reports
-htmlcov/
-.coverage
-.coverage.*
-coverage.xml
-
-# Pytest
-.pytest_cache/
-
-# mypy
-.mypy_cache/
-
-# Pylint
-.pylintrc
-
-# Flask
-instance/
-
-# Database
-*.db
-*.sqlite3
-
-# OS generated files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
+fresh_env/
+*.dylib
