--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,6 @@ Flask-CORS==3.0.10
 Werkzeug==2.0.1
 numpy==1.26.4
 Pillow==9.5.0
-tensorflow==2.14.0
+tensorflow-cpu==2.14.0
 gunicorn==20.1.0
 absl-py==1.4.0
