--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Werkzeug==2.0.1
 numpy==1.26.4
 Pillow==9.5.0
 tensorflow==2.14.0
+tensorflow-cpu==2.12.0
 gunicorn==20.1.0
 absl-py==1.4.0
 tensorflow_hub==0.12.0
